--- a/src/properties/ml-10m.properties
+++ b/src/properties/ml-10m.properties
@@ -1,5 +1,5 @@
-ratingData=data/ml-10m/ratings.dat
-splitString=::
+ratingData=data/Movielens10M.txt
+splitString=,
 numUsers=71567
 numItems=10681
 numOfRatings=10000054
